--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "express": "^4.0.0",
-    "ember": "^1.0.0-pre.2"
+    "ember": "^1.0.0-pre.2",
+    "forever": "^0.11.1"
   }
 }
