Made the project private, I'll make it public once it's ready to be published (v1.0).

--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "mancala",
   "version": "0.0.0",
   "description": "Play Mancala against other opponents on the same server. Multiple concurrent games and chat rooms supported.",
+  "private": "true",
   "main": "index.js",
   "engines": {
     "node": "0.10.x"
